[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = 'src/sts_credentials/__init__.py'

[project]
name = "sts-credentials"
dynamic = ["version"]
authors = [{ name = "sunfkny", email = "sunfkny@gmail.com" }]
description = "get sts credentials tools, use pydantic for autocompletion."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'qcloud-python-sts>=3,<4',
  'alibabacloud_sts20150401>=1,<2',
  'pydantic',
]
classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
  "Topic :: Software Development",
  "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/sunfkny/sts-credentials"
